API Improvements
